# esp-mdl-interface

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
case/: esp-mdl-case.3mf
src/: main.rs
src/ble/: central.rs  mod.rs  peripheral.rs
src/nfc/: mod.rs  ndef.rs
