[package]
name = "esp-mdl-interface"
version = "0.1.0"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]
license = "MIT"
publish = false

[[bin]]
name = "esp-mdl-interface"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
embedded-hal = "1.0.0"
embedded-io = { version = "0.6.1", features = ["std"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
esp32-nimble = "0.10.2"
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = "0.4"
minicbor = { version = "0.26.1", features = ["std"] }
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
packed_struct = "0.10.1"
palette = { version = "0.7.6", default-features = false }
pn532 = { version = "0.5.0", default-features = false }
postcard = { version = "1.1.1", features = ["alloc", "embedded-io-06"] }
ringbuffer = "0.15.0"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
smart_led_effects = "0.1.8"
smart-leds = "0.4.0"
thiserror = "2.0.11"
uuid = { version = "1.15.1", features = ["v4"] }
ws2812-esp32-rmt-driver = { version = "0.12.0", features = [
    "smart-leds-trait",
] }

[build-dependencies]
embuild = "0.33"
